Fixes #1281: VAL - The 'Type' drop down is not aligned properly in the 'Add Discrepancy Note' page (IE browser). Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1494 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -1259,6 +1259,12 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
     margin-bottom: 7px;
 }
 
+.formFieldLSelect {
+    width: 199px;
+    margin-top: 2px;
+    margin-left: 1px;
+}
+
 .formfieldL_BG { background-image: url(../images/formfieldL_BG.gif);
     background-repeat: no-repeat;
     width: 207px;
